--- a/src/main/resources/org/sagebionetworks/web/client/view/ComingSoonViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ComingSoonViewImpl.ui.xml
@@ -24,6 +24,7 @@
 		</g:FlowPanel>
 		
 		<bh:Div ui:field="widgetContainer" />
+		<bh:Div ui:field="chart" width="100%" height="400px" />
 		<h2>Coming Soon</h2>
 		
 		This page is coming soon.
