add context help to create Table/FileView wizard

--- a/src/main/resources/org/sagebionetworks/web/client/widget/table/modal/wizard/ModalWizardViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/widget/table/modal/wizard/ModalWizardViewImpl.ui.xml
@@ -3,11 +3,18 @@
 	xmlns:g="urn:import:com.google.gwt.user.client.ui" xmlns:c="urn:import:com.google.gwt.user.cellview.client"
 	xmlns:b="urn:import:org.gwtbootstrap3.client.ui" xmlns:t="urn:import:org.sagebionetworks.web.client.widget.table.v2"
 	xmlns:a="urn:import:org.sagebionetworks.web.client.widget.table.v2"
-	xmlns:bg="urn:import:org.gwtbootstrap3.client.ui.gwt" xmlns:bh="urn:import:org.gwtbootstrap3.client.ui.html">
+	xmlns:bg="urn:import:org.gwtbootstrap3.client.ui.gwt" 
+	xmlns:bh="urn:import:org.gwtbootstrap3.client.ui.html"
+	xmlns:w="urn:import:org.sagebionetworks.web.client.widget">
 
 	<!-- Dialog for creating a new table -->
 	<b:Modal closable="true"
 		dataBackdrop="STATIC" dataKeyboard="false">
+		<b:ModalHeader>
+		    <b:Heading size="H4" ui:field="modalTitle" addStyleNames="displayInline" />
+		    <bh:Span ui:field="helpContainer" />
+		</b:ModalHeader>
+	
 		<b:ModalBody>
 			<bh:Text ui:field="instructions"></bh:Text>
 			<g:SimplePanel ui:field="bodyPanel"/>
