--- a/src/main/webapp/Portal.css
+++ b/src/main/webapp/Portal.css
@@ -763,6 +763,10 @@ a.shortBtn {
 .margin-left-20 {
 	margin-left: 20px;
 }
+.margin-left-30 {
+	margin-left: 30px;
+}
+
 
 .margin-right-15 {
 	margin-right: 15px;
