--- a/src/main/resources/org/sagebionetworks/web/client/view/ACTDataAccessSubmissionsViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ACTDataAccessSubmissionsViewImpl.ui.xml
@@ -9,78 +9,94 @@
 		<b:Heading ui:field="title" size="H2" text="ACT Access Requirement Data Access Submissions" addStyleNames="margin-top-30 margin-left-35 margin-right-10" />
 		<bh:Div ui:field="synAlertContainer" />
 		<bh:Div addStyleNames="margin-top-30 margin-left-35 min-height-400 margin-right-10 light-border">
-				<bh:Div ui:field="showHideAccessRequirementButtonContainer" addStyleNames="margin-left-10 margin-bottom-20"/>
+			<bh:Div ui:field="showHideAccessRequirementButtonContainer" addStyleNames="margin-left-10 margin-bottom-20"/>
+			<b:Panel ui:field="accessRequirementUI" addStyleNames="margin-10 padding-10">
 				<bh:Div ui:field="accessRequirementContainer" />
-				<b:Row>
-					<b:Column size="SM_6">
-						<b:Panel addStyleNames="margin-left-10 margin-right-10 margin-bottom-20">
-							<b:PanelHeader>
-								<b:Heading size="H3" text="State filter" />
-								<bh:Span ui:field="currentState"/>
-								<b:Button ui:field="clearStateFilter" type="DANGER" pull="RIGHT" addStyleNames="moveup-18" size="EXTRA_SMALL" text="Clear" />
-							</b:PanelHeader>
-							<b:PanelBody>
-								<b:ButtonGroup>
-									<b:Button dataToggle="DROPDOWN" text="Filter by submission state..."/>
-									<b:DropDownMenu ui:field="stateDropdownMenu" />
-								</b:ButtonGroup>
-							</b:PanelBody>
-						</b:Panel>
-					</b:Column>
-					<b:Column size="SM_6">
-						<b:Panel addStyleNames="margin-left-10 margin-right-10 margin-bottom-20">
-							<b:PanelHeader>
-								<b:Heading size="H3" text="Date range filter" />
-								<b:Button ui:field="clearDateFilter" type="DANGER" pull="RIGHT" addStyleNames="moveup-18" size="EXTRA_SMALL" text="Clear" />
-							</b:PanelHeader>
-							<b:PanelBody>
-								<b:FormLabel>from</b:FormLabel>
-								<bd:DateTimePicker ui:field="minDatePicker"
-									autoClose="true" highlightToday="true" showTodayButton="true"
-									showMeridian="false" format="mm/dd/yyyy hh:ii:ss" minView="MONTH"
-									hasKeyboardNavigation="false" />
-								<b:FormLabel>to</b:FormLabel>
-								<bd:DateTimePicker ui:field="maxDatePicker"
-									autoClose="true" highlightToday="true" showTodayButton="true"
-									showMeridian="false" format="mm/dd/yyyy hh:ii:ss" minView="MONTH"
-									hasKeyboardNavigation="false" />
-							</b:PanelBody>
-						</b:Panel>
-					</b:Column>
-				</b:Row>
-				<!-- table header -->
-				<t:Table width="100%" addStyleNames="margin-left-10 margin-right-10 table-layout-fixed">
-					<t:TableRow>
-						<t:TableHeader width="10%" addStyleNames="hidden-xs">
-							<bh:Span text="State" />
-						</t:TableHeader>
-						<t:TableHeader width="10%">
-							<bh:Span text="Institution" />
-						</t:TableHeader>
-						<t:TableHeader width="10%" addStyleNames="hidden-xs">
-							<bh:Span text="Project Lead" />
-						</t:TableHeader>
-						<t:TableHeader width="15%" addStyleNames="hidden-xs">
-							<bh:Span text="Intended Data Use Statement" />
-						</t:TableHeader>
-						<t:TableHeader width="15%" addStyleNames="hidden-xs">
-							<bh:Span text="Accessors" />
-						</t:TableHeader>
-						<t:TableHeader ui:field="ducColumn" width="10%" addStyleNames="hidden-xs">
-							<bh:Span text="DUC" />
-						</t:TableHeader>
-						<t:TableHeader ui:field="irbColumn" width="10%" addStyleNames="hidden-xs">
-							<bh:Span text="IRB" />
-						</t:TableHeader>
-						<t:TableHeader ui:field="otherAttachmentsColumn" width="10%">
-							<bh:Span text="Other docs" />
-						</t:TableHeader>
-						<t:TableHeader width="10%">
-							<bh:Span text="Actions" />
-						</t:TableHeader>
-					</t:TableRow>
-				</t:Table>
-				<bh:Div ui:field="tableData" addStyleNames="margin-bottom-20" />
+				<b:FormGroup>
+					<b:CheckBox ui:field="certifiedCheckbox" text="Accessors must be certified." enabled="false"/>
+					<b:CheckBox ui:field="validatedCheckbox"
+						text="Accessors must have a validated profile." enabled="false"/>
+				</b:FormGroup>
+				<b:FormGroup>
+					<b:CheckBox ui:field="ducCheckbox" text="DUC is required." enabled="false" />
+					<bh:Div ui:field="ducTemplateFileContainer" />
+				</b:FormGroup>
+				<b:CheckBox ui:field="irbCheckbox" text="IRB approval is required." enabled="false" />
+				<b:CheckBox ui:field="otherAttachmentsCheckbox" text="Other documents are required." enabled="false" />
+				<b:CheckBox ui:field="annualRenewalCheckbox" text="Annual renewal is required." enabled="false" />
+				<b:CheckBox ui:field="intendedDataUsePublicCheckbox"
+					text="Intended Data Use statements will be publicly available." enabled="false" />
+			</b:Panel>
+			<b:Row>
+				<b:Column size="SM_6">
+					<b:Panel addStyleNames="margin-left-10 margin-right-10 margin-bottom-20">
+						<b:PanelHeader>
+							<b:Heading size="H3" text="State filter" />
+							<bh:Span ui:field="currentState"/>
+							<b:Button ui:field="clearStateFilter" type="DANGER" pull="RIGHT" addStyleNames="moveup-18" size="EXTRA_SMALL" text="Clear" />
+						</b:PanelHeader>
+						<b:PanelBody>
+							<b:ButtonGroup>
+								<b:Button dataToggle="DROPDOWN" text="Filter by submission state..."/>
+								<b:DropDownMenu ui:field="stateDropdownMenu" />
+							</b:ButtonGroup>
+						</b:PanelBody>
+					</b:Panel>
+				</b:Column>
+				<b:Column size="SM_6">
+					<b:Panel addStyleNames="margin-left-10 margin-right-10 margin-bottom-20">
+						<b:PanelHeader>
+							<b:Heading size="H3" text="Date range filter" />
+							<b:Button ui:field="clearDateFilter" type="DANGER" pull="RIGHT" addStyleNames="moveup-18" size="EXTRA_SMALL" text="Clear" />
+						</b:PanelHeader>
+						<b:PanelBody>
+							<b:FormLabel>from</b:FormLabel>
+							<bd:DateTimePicker ui:field="minDatePicker"
+								autoClose="true" highlightToday="true" showTodayButton="true"
+								showMeridian="false" format="mm/dd/yyyy hh:ii:ss" minView="MONTH"
+								hasKeyboardNavigation="false" />
+							<b:FormLabel>to</b:FormLabel>
+							<bd:DateTimePicker ui:field="maxDatePicker"
+								autoClose="true" highlightToday="true" showTodayButton="true"
+								showMeridian="false" format="mm/dd/yyyy hh:ii:ss" minView="MONTH"
+								hasKeyboardNavigation="false" />
+						</b:PanelBody>
+					</b:Panel>
+				</b:Column>
+			</b:Row>
+			<!-- table header -->
+			<t:Table width="100%" addStyleNames="margin-left-10 margin-right-10 table-layout-fixed">
+				<t:TableRow>
+					<t:TableHeader width="10%" addStyleNames="hidden-xs">
+						<bh:Span text="State" />
+					</t:TableHeader>
+					<t:TableHeader width="10%">
+						<bh:Span text="Institution" />
+					</t:TableHeader>
+					<t:TableHeader width="10%" addStyleNames="hidden-xs">
+						<bh:Span text="Project Lead" />
+					</t:TableHeader>
+					<t:TableHeader width="15%" addStyleNames="hidden-xs">
+						<bh:Span text="Intended Data Use Statement" />
+					</t:TableHeader>
+					<t:TableHeader width="15%" addStyleNames="hidden-xs">
+						<bh:Span text="Accessors" />
+					</t:TableHeader>
+					<t:TableHeader ui:field="ducColumn" width="10%" addStyleNames="hidden-xs">
+						<bh:Span text="DUC" />
+					</t:TableHeader>
+					<t:TableHeader ui:field="irbColumn" width="10%" addStyleNames="hidden-xs">
+						<bh:Span text="IRB" />
+					</t:TableHeader>
+					<t:TableHeader ui:field="otherAttachmentsColumn" width="10%">
+						<bh:Span text="Other docs" />
+					</t:TableHeader>
+					<t:TableHeader width="10%">
+						<bh:Span text="Actions" />
+					</t:TableHeader>
+				</t:TableRow>
+			</t:Table>
+			<bh:Div ui:field="tableData" addStyleNames="margin-bottom-20" />
 		</bh:Div>
 		<bh:Div addStyleNames="clear" />
 		<g:SimplePanel ui:field="footer" />
