--- a/src/main/resources/org/sagebionetworks/web/client/view/ACTDataAccessSubmissionsViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ACTDataAccessSubmissionsViewImpl.ui.xml
@@ -65,49 +65,50 @@
 				</b:Column>
 			</b:Row>
 			<!-- table header -->
-			<t:Table width="100%" addStyleNames="margin-left-10 margin-right-10 table-layout-fixed">
+			<t:Table addStyleNames="margin-left-10 margin-right-10">
 				<t:TableRow>
-					<t:TableHeader width="10%" >
+					<t:TableHeader width="160px">
 						<b:Anchor ui:field="createdOnColumnHeader" text="Created On"/>
 					</t:TableHeader>
-					<t:TableHeader width="10%" addStyleNames="hidden-xs">
+					<t:TableHeader width="100px" addStyleNames="hidden-xs">
 						<bh:Span text="State" />
 					</t:TableHeader>
-					<t:TableHeader width="10%">
+					<t:TableHeader width="220px">
 						<bh:Span text="Institution" />
 					</t:TableHeader>
-					<t:TableHeader width="10%" addStyleNames="hidden-xs">
+					<t:TableHeader width="220px" addStyleNames="hidden-xs">
 						<bh:Span text="Project Lead" />
 					</t:TableHeader>
-					<t:TableHeader width="15%" addStyleNames="hidden-xs">
+					<t:TableHeader width="200px" addStyleNames="hidden-xs">
 						<bh:Span text="Intended Data Use Statement" />
 					</t:TableHeader>
-					<t:TableHeader width="15%" addStyleNames="hidden-xs">
-						<bh:Span text="Accessors" />
+					<t:TableHeader width="300px" addStyleNames="hidden-xs">
+						<bh:Span text="Accessors"/>
 					</t:TableHeader>
-					<t:TableHeader ui:field="ducColumn" width="10%" addStyleNames="hidden-xs">
+					<t:TableHeader ui:field="ducColumn" width="150px" addStyleNames="hidden-xs">
 						<bh:Span text="DUC" />
 					</t:TableHeader>
-					<t:TableHeader ui:field="irbColumn" width="10%" addStyleNames="hidden-xs">
+					<t:TableHeader ui:field="irbColumn" width="150px" addStyleNames="hidden-xs">
 						<bh:Span text="IRB" />
 					</t:TableHeader>
-					<t:TableHeader ui:field="otherAttachmentsColumn" width="10%">
+					<t:TableHeader ui:field="otherAttachmentsColumn" width="150px" >
 						<bh:Span text="Other Docs" />
 					</t:TableHeader>
-					<t:TableHeader ui:field="isRenewalColumn" width="5%">
+					<t:TableHeader ui:field="isRenewalColumn" width="20px">
 						<bh:Span text="Is Renewal" />
 					</t:TableHeader>
-					<t:TableHeader ui:field="publicationsColumn" width="10%">
+					<t:TableHeader ui:field="publicationsColumn" width="150px">
 						<bh:Span text="Publications" />
 					</t:TableHeader>
-					<t:TableHeader ui:field="summaryOfUseColumn" width="10%">
+					<t:TableHeader ui:field="summaryOfUseColumn" width="150px">
 						<bh:Span text="Summary Of Use" />
 					</t:TableHeader>
-					<t:TableHeader width="10%">
+					<t:TableHeader width="200px">
 						<bh:Span text="Actions" />
 					</t:TableHeader>
 				</t:TableRow>
 			</t:Table>
+			<bh:Hr />
 			<bh:Div ui:field="tableData" addStyleNames="margin-bottom-20" />
 		</bh:Div>
 		<bh:Div addStyleNames="clear" />
