--- a/src/main/resources/org/sagebionetworks/web/client/view/ACTDataAccessSubmissionsViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ACTDataAccessSubmissionsViewImpl.ui.xml
@@ -27,46 +27,45 @@
 				<b:CheckBox ui:field="intendedDataUsePublicCheckbox"
 					text="Intended Data Use statements will be publicly available." enabled="false" />
 			</b:Panel>
-			<b:Row>
-				<b:Column size="SM_12">
-					<b:Panel addStyleNames="margin-left-10 margin-right-10 margin-bottom-20">
-						<b:PanelHeader>
-							<b:Heading size="H3" text="State filter" />
-							<bh:Span ui:field="currentState"/>
-							<b:Button ui:field="clearStateFilter" type="DANGER" pull="RIGHT" addStyleNames="moveup-18" size="EXTRA_SMALL" text="Clear" />
-						</b:PanelHeader>
-						<b:PanelBody>
-							<b:ButtonGroup>
-								<b:Button dataToggle="DROPDOWN" text="Filter by submission state..."/>
-								<b:DropDownMenu ui:field="stateDropdownMenu" />
-							</b:ButtonGroup>
-						</b:PanelBody>
-					</b:Panel>
-				</b:Column>
-				<b:Column size="SM_6" visible="false">
-					<b:Panel addStyleNames="margin-left-10 margin-right-10 margin-bottom-20">
-						<b:PanelHeader>
-							<b:Heading size="H3" text="Date range filter" />
-							<b:Button ui:field="clearDateFilter" type="DANGER" pull="RIGHT" addStyleNames="moveup-18" size="EXTRA_SMALL" text="Clear" />
-						</b:PanelHeader>
-						<b:PanelBody>
-							<b:FormLabel>from</b:FormLabel>
-							<bd:DateTimePicker ui:field="minDatePicker"
-								autoClose="true" highlightToday="true" showTodayButton="true"
-								showMeridian="false" format="mm/dd/yyyy hh:ii:ss" minView="MONTH"
-								hasKeyboardNavigation="false" />
-							<b:FormLabel>to</b:FormLabel>
-							<bd:DateTimePicker ui:field="maxDatePicker"
-								autoClose="true" highlightToday="true" showTodayButton="true"
-								showMeridian="false" format="mm/dd/yyyy hh:ii:ss" minView="MONTH"
-								hasKeyboardNavigation="false" />
-						</b:PanelBody>
-					</b:Panel>
-				</b:Column>
-			</b:Row>
+			<bh:Div width="265px">
+				<b:Panel addStyleNames="margin-left-10 margin-right-10 margin-bottom-20">
+					<b:PanelHeader>
+						<b:Heading size="H3" text="State Filter" />
+						<bh:Span ui:field="currentState"/>
+						<b:Button ui:field="clearStateFilter" type="DANGER" pull="RIGHT" addStyleNames="moveup-18" size="EXTRA_SMALL" text="Clear" />
+					</b:PanelHeader>
+					<b:PanelBody>
+						<b:ButtonGroup>
+							<b:Button dataToggle="DROPDOWN" text="Filter by submission state..."/>
+							<b:DropDownMenu ui:field="stateDropdownMenu" />
+						</b:ButtonGroup>
+					</b:PanelBody>
+				</b:Panel>
+			</bh:Div>
+			<b:Column size="SM_6" visible="false">
+				<b:Panel addStyleNames="margin-left-10 margin-right-10 margin-bottom-20">
+					<b:PanelHeader>
+						<b:Heading size="H3" text="Date range filter" />
+						<b:Button ui:field="clearDateFilter" type="DANGER" pull="RIGHT" addStyleNames="moveup-18" size="EXTRA_SMALL" text="Clear" />
+					</b:PanelHeader>
+					<b:PanelBody>
+						<b:FormLabel>from</b:FormLabel>
+						<bd:DateTimePicker ui:field="minDatePicker"
+							autoClose="true" highlightToday="true" showTodayButton="true"
+							showMeridian="false" format="mm/dd/yyyy hh:ii:ss" minView="MONTH"
+							hasKeyboardNavigation="false" />
+						<b:FormLabel>to</b:FormLabel>
+						<bd:DateTimePicker ui:field="maxDatePicker"
+							autoClose="true" highlightToday="true" showTodayButton="true"
+							showMeridian="false" format="mm/dd/yyyy hh:ii:ss" minView="MONTH"
+							hasKeyboardNavigation="false" />
+					</b:PanelBody>
+				</b:Panel>
+			</b:Column>
+			
 			<!-- table header -->
 			<g:ScrollPanel>
-				<t:Table addStyleNames="table-layout-fixed" width="3000px">
+				<t:Table addStyleNames="table-layout-fixed margin-left-10 margin-bottom-20" width="3000px">
 					<t:TableRow>
 						<t:TableHeader addStyleNames="min-width-150">
 							<b:Anchor ui:field="createdOnColumnHeader" text="Created On"/>
