--- a/src/main/resources/org/sagebionetworks/web/client/view/ACTDataAccessSubmissionsViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ACTDataAccessSubmissionsViewImpl.ui.xml
@@ -66,16 +66,15 @@
 			<!-- table header -->
 			<t:Table addStyleNames="table-layout-fixed margin-left-10 margin-bottom-20" width="100%" >
 				<t:TableRow>
-					<t:TableHeader width="25%">
+					<t:TableHeader width="100px" />
+					<t:TableHeader width="115px">
 						<bh:Span text="State" />
 					</t:TableHeader>
-					<t:TableHeader width="25%">
+					<t:TableHeader width="175px">
 						<b:Anchor ui:field="createdOnColumnHeader" text="Submitted On"/>
 					</t:TableHeader>
-					<t:TableHeader width="25%">
+					<t:TableHeader width="90%">
 						<bh:Span text="Submitted By" />
-					</t:TableHeader>
-					<t:TableHeader width="25%">
 					</t:TableHeader>
 				</t:TableRow>
 			</t:Table>
