--- a/src/main/resources/org/sagebionetworks/web/client/view/ACTDataAccessSubmissionsViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ACTDataAccessSubmissionsViewImpl.ui.xml
@@ -19,20 +19,23 @@
 		<bh:Div ui:field="synAlertContainer" />
 		<b:Panel ui:field="accessRequirementUI" addStyleNames="margin-top-30 margin-left-35 margin-right-10 light-border padding-10">
 			<bh:Div ui:field="accessRequirementContainer" />
-			<b:FormGroup>
-				<b:CheckBox ui:field="certifiedCheckbox" text="Accessors must be certified." enabled="false"/>
-				<b:CheckBox ui:field="validatedCheckbox"
-					text="Accessors must have a validated profile." enabled="false"/>
-			</b:FormGroup>
-			<b:FormGroup>
-				<b:CheckBox ui:field="ducCheckbox" text="DUC is required." enabled="false" />
-				<bh:Div ui:field="ducTemplateFileContainer" />
-			</b:FormGroup>
-			<b:CheckBox ui:field="irbCheckbox" text="IRB approval is required." enabled="false" />
-			<b:CheckBox ui:field="otherAttachmentsCheckbox" text="Other documents are required." enabled="false" />
-			<b:CheckBox ui:field="annualRenewalCheckbox" text="Annual renewal is required." enabled="false" />
-			<b:CheckBox ui:field="intendedDataUsePublicCheckbox"
-				text="Intended Data Use statements will be publicly available." enabled="false" />
+			<bh:Div ui:field="hasRequestUI">
+				<b:FormGroup>
+					<b:CheckBox ui:field="certifiedCheckbox" text="Accessors must be certified." enabled="false"/>
+					<b:CheckBox ui:field="validatedCheckbox"
+						text="Accessors must have a validated profile." enabled="false"/>
+				</b:FormGroup>
+				<b:FormGroup>
+					<b:CheckBox ui:field="ducCheckbox" text="DUC is required." enabled="false" />
+					<bh:Div ui:field="ducTemplateFileContainer" />
+				</b:FormGroup>
+				<b:CheckBox ui:field="irbCheckbox" text="IRB approval is required." enabled="false" />
+				<b:CheckBox ui:field="otherAttachmentsCheckbox" text="Other documents are required." enabled="false" />
+				<b:CheckBox ui:field="annualRenewalCheckbox" text="Annual renewal is required." enabled="false" />
+				<b:CheckBox ui:field="intendedDataUsePublicCheckbox"
+					text="Intended Data Use statements will be publicly available." enabled="false" />
+			</bh:Div>
+			
 		</b:Panel>
 		<bh:Div addStyleNames="margin-top-30 margin-left-35 min-height-400 margin-right-10 light-border">
 			<bh:Div width="265px">
