--- a/src/main/resources/org/sagebionetworks/web/client/view/ACTDataAccessSubmissionsViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ACTDataAccessSubmissionsViewImpl.ui.xml
@@ -6,14 +6,13 @@
 	xmlns:bd="urn:import:org.gwtbootstrap3.extras.datetimepicker.client.ui">
 	<bh:Div>
 		<g:SimplePanel ui:field="header" />
-		<bh:Div addStyleNames="margin-left-35 margin-right-10 margin-top-5">
-			<b:Anchor text="ACT data access dashboard" href="#!ACTDataAccessSubmissionDashboard:default"/>
-			<g:HTML addStyleNames="displayInlineBlock margin-left-5 margin-right-5">&gt;</g:HTML>
-			<bh:Text>Access requirement data access submissions</bh:Text>
-		</bh:Div>
+		<b:NavPills addStyleNames="margin-left-35 margin-right-10 margin-top-5">
+			<b:AnchorListItem icon="ARROW_LEFT" text="Go Back" ui:field="backLink" />
+			<b:AnchorListItem text="ACT data access dashboard" href="#!ACTDataAccessSubmissionDashboard:default"/>
+		</b:NavPills>
 		<bh:Div ui:field="showHideAccessRequirementButtonContainer" pull="RIGHT"/>
 		<b:Heading ui:field="title" size="H3" addStyleNames="margin-top-30 margin-left-35 margin-right-10">
-			<bh:Text>Submissions to access: </bh:Text>
+			<bh:Text>Manage access for: </bh:Text>
 			<bh:Div ui:field="subjectsContainer" />	 
 		</b:Heading>
 		<bh:Div ui:field="synAlertContainer" />
