--- a/src/main/resources/org/sagebionetworks/web/client/view/PlaceViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/PlaceViewImpl.ui.xml
@@ -5,7 +5,7 @@
 	xmlns:t="urn:import:org.sagebionetworks.web.client.view.bootstrap.table">
 	<bh:Div>
 		<g:SimplePanel ui:field="header" />
-		<b:Heading ui:field="title" size="H2" addStyleNames="margin-top-30 margin-left-35 margin-right-10" />
+		<b:Heading ui:field="title" size="H2" addStyleNames="margin-top-30 margin-left-10" />
 		<bh:Div ui:field="above" />
 		<bh:Div ui:field="body" addStyleNames="margin-10" />
 		<bh:Div ui:field="below" addStyleNames="margin-bottom-20" />
