--- a/src/main/resources/org/sagebionetworks/web/client/view/ACTDataAccessSubmissionsViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ACTDataAccessSubmissionsViewImpl.ui.xml
@@ -31,7 +31,7 @@
 				<b:CheckBox ui:field="irbCheckbox" text="IRB approval is required." enabled="false" />
 				<b:CheckBox ui:field="otherAttachmentsCheckbox" text="Other documents are required." enabled="false" />
 				<b:FormGroup>
-					<b:FormLabel>Expiration Period</b:FormLabel>
+					<b:FormLabel>Expiration Period (Days)</b:FormLabel>
 					<b:TextBox ui:field="expirationPeriodTextbox" readOnly="true"/>
 				</b:FormGroup>
 				<b:CheckBox ui:field="annualRenewalCheckbox" text="Annual renewal is required." enabled="false" />
