--- a/src/main/resources/org/sagebionetworks/web/client/view/ACTDataAccessSubmissionsViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ACTDataAccessSubmissionsViewImpl.ui.xml
@@ -38,9 +38,9 @@
 					text="Intended Data Use statements will be publicly available." enabled="false" />
 			</bh:Div>
 		</b:Panel>
-		<b:Well size="SMALL" ui:field="expirationDateUI">
-			<bh:Text>If approved, access will expire on: </bh:Text>
-			<bh:Text ui:field="expirationDate"/>
+		<b:Well size="SMALL" ui:field="expirationDateUI" addStyleNames="margin-left-35">
+			<bh:Text>If approved, access will expire on:</bh:Text>
+			<bh:Strong addStyleNames="margin-left-10" ui:field="expirationDate"/>
 		</b:Well>
 		<bh:Div addStyleNames="margin-top-30 margin-left-35 min-height-400 margin-right-10 light-border">
 			<bh:Div width="265px">
