--- a/src/main/resources/org/sagebionetworks/web/client/view/SettingsViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/SettingsViewImpl.ui.xml
@@ -30,6 +30,15 @@
 					    </g:FlowPanel>
 					    <g:SimplePanel ui:field="notificationSynAlertPanel"/>
 					</bh:Div>
+					<bh:Div ui:field="dateTimeFormatPanel" addStyleNames="highlight-box">
+						<b:ButtonGroup>
+							<b:Button ui:field="dateFormatDropdown" dataToggle="DROPDOWN" size="SMALL" text="Local time" addStyleNames="margin-top-10"/>
+							<b:DropDownMenu>
+								<b:AnchorListItem ui:field="dateFormatLocal" text="Local time"/>
+								<b:AnchorListItem ui:field="dateFormatUTC" text="UTC"/>
+							</b:DropDownMenu>
+						</b:ButtonGroup>
+					</bh:Div>
 			    </b:Column>
    			    <b:Column size="LG_6">
    			    	<bh:Div ui:field="changeSynapsePasswordUI">
