--- a/src/main/webapp/Portal.css
+++ b/src/main/webapp/Portal.css
@@ -1430,6 +1430,11 @@ h1, h2, h3, h4, h5, h6 {
 	max-height: 200px;
 }
 
+.max-height-100 {
+	max-height: 100px;
+}
+
+
 .wikifilepreview {
 	width: 940px;
 }
