--- a/src/main/webapp/Portal.css
+++ b/src/main/webapp/Portal.css
@@ -1222,7 +1222,9 @@ h1, h2, h3, h4, h5, h6 {
 .boldText {
 	font-weight: bold;	
 }
-
+.strikeout-links a {
+	text-decoration: line-through; 
+}
 .scroll-x {
 	overflow-x: auto;
 }
