--- a/src/main/resources/org/sagebionetworks/web/client/view/ACTAccessApprovalsViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ACTAccessApprovalsViewImpl.ui.xml
@@ -44,18 +44,17 @@
 			<!-- table header -->
 			<t:Table addStyleNames="table-layout-fixed margin-left-10 margin-bottom-20" width="100%" >
 				<t:TableRow>
+					<!-- action column (revoke) -->
 					<t:TableHeader width="100px" />
-					<t:TableHeader width="115px">
-						<bh:Span text="State" />
-					</t:TableHeader>
-					<t:TableHeader width="175px">
-						<b:Anchor ui:field="createdOnColumnHeader" text="Submitted On"/>
-					</t:TableHeader>
-					<t:TableHeader width="50%">
+					<t:TableHeader width="40%">
 						<bh:Span text="Submitted By" />
 					</t:TableHeader>
-					<t:TableHeader width="50%">
-						<bh:Span text="Institution" />
+					<t:TableHeader width="40%">
+						<!-- list of accessor badges, as well as easy way to copy all (synapse.org) email addresses -->
+						<bh:Span text="Accessors" />
+					</t:TableHeader>
+					<t:TableHeader width="100px">
+						<bh:Span text="Access Requirement" />
 					</t:TableHeader>
 				</t:TableRow>
 			</t:Table>
