SWC-3675: rename ManageAccessButton to ReviewAccessorsButton

--- a/src/main/resources/org/sagebionetworks/web/client/view/ACTAccessApprovalsViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ACTAccessApprovalsViewImpl.ui.xml
@@ -11,7 +11,11 @@
 		<bh:Div ui:field="synAlertContainer" />
 		<b:Panel ui:field="accessRequirementUI" addStyleNames="margin-left-35 margin-right-10 light-border padding-10">
 			<bh:Div ui:field="accessRequirementContainer" />
-			<b:Button ui:field="clearAccessRequirementFilter" type="INFO">Expand search to all Access Requirements</b:Button>
+			<bh:Div>
+				<b:Button ui:field="clearAccessRequirementFilter" type="PRIMARY" >Expand search to all Access Requirements</b:Button>
+				<b:Button ui:field="reviewRequestsButton" type="PRIMARY" addStyleNames="margin-left-10">Review Requests</b:Button>
+			</bh:Div>
+			
 		</b:Panel>
 		<bh:Div addStyleNames="margin-top-30 margin-left-35 min-height-400 margin-right-10 light-border">
 			<b:Column size="SM_6">
@@ -53,6 +57,9 @@
 					<t:TableHeader width="40%">
 						<!-- list of accessor badge-->
 						<bh:Span text="Accessors" />
+					</t:TableHeader>
+					<t:TableHeader width="175px">
+						<bh:Span text="Expires On" />
 					</t:TableHeader>
 					<t:TableHeader width="100px">
 					 	<!-- easy way to copy all (synapse.org) email addresses --> 
