SWC-3659: change color too

--- a/src/main/webapp/Portal.css
+++ b/src/main/webapp/Portal.css
@@ -1226,6 +1226,10 @@ h1, h2, h3, h4, h5, h6 {
 .strikeout-links a {
 	text-decoration: line-through; 
 }
+.lightgrey-links a {
+	color: #909090; 
+}
+
 .scroll-x {
 	overflow-x: auto;
 }
