--- a/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
@@ -130,7 +130,7 @@
 				    	<b:Button ui:field="showProfileButton" size="EXTRA_SMALL" icon="CHEVRON_RIGHT" text="Show Profile" visible="false"/>
 				    	<div class="container-fluid">
 					    	<div class="row" ui:field="navtabContainer">
-							    <ul class="nav nav-tabs entity-tabs margin-top-15">
+							    <ul class="nav nav-tabs entity-tabs margin-top-15 border-none">
 								    <li class="entity-tab active margin-left-15" ui:field="projectsListItem">
 								    	<a class="text-align-center link no-background">
 									    	<g:FocusPanel ui:field="projectsLink" addStyleNames="displayInline">
@@ -168,16 +168,16 @@
 						    <div class="row">
 								<div class="tab-background padding-10" ui:field="projectsTabContainer">
 									<div ui:field="createProjectUI" class="margin-bottom-10 margin-top-10 row">
-									    <div class="col-xs-8 col-sm-6">
-							    		<b:InputGroup>
-											<g:TextBox ui:field="createProjectTextBox" width="100%" height="34px" />
-											<b:InputGroupButton>
-												<b:Button ui:field="createProjectButton" text="Create Project"/>
-											</b:InputGroupButton>
-										</b:InputGroup>
-											</div>
-										<div class="col-xs-4 col-sm-6">
-										    <b:Button ui:field="projectSearchButton" type="DEFAULT" icon="SEARCH" pull="RIGHT" text="Search All Projects" />
+									    <div class="col-xs-12 col-sm-8">
+								    		<b:InputGroup>
+												<g:TextBox ui:field="projectSearchTextBox" width="100%" height="34px" />
+												<b:InputGroupButton>
+													<b:Button ui:field="projectSearchButton" text="Search All Projects" icon="SEARCH"/>
+												</b:InputGroupButton>
+											</b:InputGroup>
+										</div>
+										<div class="col-xs-12 col-sm-4">
+										    <b:Button ui:field="createProjectButton" type="DEFAULT" icon="PLUS" pull="RIGHT" text="Create a New Project" />
 										</div>
 										<b:Column size="XS_12">
 											<g:FlowPanel ui:field="projectSynAlertPanel"/>
@@ -237,16 +237,16 @@
 							    </div>
 							    <div class="tab-background padding-10 container-fluid" ui:field="teamsTabContainer">
 							    	<div ui:field="createTeamUI" class="margin-bottom-10 margin-top-10 row">
-									    <div class="col-xs-8 col-sm-6">
-							    		<b:InputGroup>
-											<g:TextBox ui:field="createTeamTextBox" width="100%" height="34px" />
-											<b:InputGroupButton>
-												<b:Button ui:field="createTeamButton" text="Create Team"/>
-											</b:InputGroupButton>
-										</b:InputGroup>
-											</div>
-										 <div class="col-xs-4 col-sm-6">
-										    <b:Button ui:field="teamSearchButton" type="DEFAULT" icon="SEARCH" pull="RIGHT" text="Search All Teams" />
+									    <div class="col-xs-12 col-sm-8">
+								    		<b:InputGroup>
+												<g:TextBox ui:field="teamSearchTextBox" width="100%" height="34px" />
+												<b:InputGroupButton>
+													<b:Button ui:field="teamSearchButton" text="Search All Teams" icon="SEARCH"/>
+												</b:InputGroupButton>
+											</b:InputGroup>
+										</div>
+										 <div class="col-xs-12 col-sm-4">
+										    <b:Button ui:field="createTeamButton" type="DEFAULT" icon="PLUS" pull="RIGHT" text="Create a New Team" />
 										</div>
 										<b:Column size="XS_12">
 											<g:SimplePanel ui:field="teamSynAlertPanel"/>
