--- a/src/main/resources/org/sagebionetworks/web/client/view/SettingsViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/SettingsViewImpl.ui.xml
@@ -13,13 +13,6 @@
 			    	<bh:Div ui:field="editProfilePanel" addStyleNames="highlight-box">
 						<b:Button ui:field="editProfileButton" icon="EDIT" >Edit Profile</b:Button>
 					</bh:Div>
-					<bh:Div ui:field="emailSettingsPanel" addStyleNames="highlight-box">
-						<bh:Div ui:field="emailsPanel" />
-					    <g:FlowPanel styleName="margin-left-10 margin-top-10">
-					       <b:CheckBox ui:field="emailNotificationsCheckbox" text="Allow Synapse to send me email notifications" addStyleNames="margin-0-imp"/> 
-					    </g:FlowPanel>
-					    <g:SimplePanel ui:field="notificationSynAlertPanel"/>
-					</bh:Div>
 					<bh:Div ui:field="dateTimeFormatPanel" addStyleNames="highlight-box">
 						<b:ButtonGroup>
 							<b:Button ui:field="dateFormatDropdown" dataToggle="DROPDOWN" size="SMALL" text="Local time" addStyleNames="margin-top-10"/>
@@ -75,6 +68,13 @@
 					</bh:Div>	
 			    </b:Column>
 			</b:Row>
+			<bh:Div ui:field="emailSettingsPanel" addStyleNames="highlight-box margin-bottom-15">
+				<bh:Div ui:field="emailsPanel" />
+				<g:FlowPanel styleName="margin-left-10 margin-top-10">
+					<b:CheckBox ui:field="emailNotificationsCheckbox" text="Allow Synapse to send me email notifications" addStyleNames="margin-0-imp" />
+				</g:FlowPanel>
+				<g:SimplePanel ui:field="notificationSynAlertPanel" />
+			</bh:Div>
 			<g:FlowPanel addStyleNames="light-border padding-10 margin-bottom-15">
 	    		<bh:Div addStyleNames="highlight-title">
 	    			<bh:Text>Following</bh:Text>
