--- a/src/main/resources/org/sagebionetworks/web/client/view/NewAccountViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/NewAccountViewImpl.ui.xml
@@ -10,6 +10,7 @@
 			    <div class="col-sm-10 col-sm-offset-1">
 			        <h2 class="margin-bottom-40">Register with Synapse</h2>
 			        <div class="margin-bottom-40" ui:field="contentHtml" />
+					<g:SimplePanel ui:field="synapseAlertContainer" />
 				    <div ui:field="registrationForm">
 				        <div class="form-horizontal">
 							  <div ui:field="email" class="form-group row">
