--- a/src/main/resources/org/sagebionetworks/web/client/view/SynapseStandaloneWikiViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/SynapseStandaloneWikiViewImpl.ui.xml
@@ -12,20 +12,7 @@
 				<b:Row>
 					<b:Column size="XS_12">
 						<bh:Div ui:field="markdownContainer" addStyleNames="min-height-400"></bh:Div>
-					</b:Column>
-				</b:Row>
-				<b:Row ui:field="errorUI" visible="false" addStyleNames="min-height-400">
-					<b:Column size="XS_12">
-						<b:Alert type="WARNING" addStyleNames="margin-top-100">
-							<bh:Strong ui:field="errorText" />
-						</b:Alert>
-					</b:Column>
-				</b:Row>
-				
-				<b:Row ui:field="loadingUI" visible="false" addStyleNames="margin-150">
-					<b:Column size="XS_12" offset="XS_5">
-						<g:Image styleName="displayInline moveup-2" resource='{sageImageBundle.loading31}' />
-						<b:Heading size="H4" text="Loading..." addStyleNames="displayInline margin-left-5"/>
+						<bh:Div ui:field="synAlertContainer" />
 					</b:Column>
 				</b:Row>
 			</b:Container>
